fixed spacing

--- a/css/style.css
+++ b/css/style.css
@@ -211,6 +211,7 @@ hr {
 }
 .section-work-title p {
   text-align: left;
+	font-size: 1.5rem;
 }
 .section-image {
   position: relative;
